--- a/css/main.css
+++ b/css/main.css
@@ -372,3 +372,14 @@ button {
 #playbook img {
     border-radius: 8px;
 }
+
+
+#confetti-canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 9999;
+}
