--- a/css/main.css
+++ b/css/main.css
@@ -285,7 +285,7 @@ color: #1F497D;
     -webkit-appearance: none;
     display: inline-block;
 	margin-right: 16px;
-    border: 1px sol1id #ccc;
+    border: 1px solid #ccc;
     color: darkslategray;
     font-weight: 700;
 	margin-top: 12px;
@@ -397,19 +397,21 @@ button {
   background-color: #f9f9f9;
   padding: 10px;
   cursor: pointer;
+  margin-bottom: 10px;
 }
 
 .accordion-icon {
-  width: 16px;
-  height: 16px;
-  background-image: url('/images/accordion-icon.png');
-  background-repeat: no-repeat;
-  background-size: cover;
+  width: 10px;
+  height: 10px;
+  border-top: 2px solid black;
+  border-right: 2px solid black;
+  transform: rotate(-45deg) scale(1);
+  transform-origin: 0 0;
   transition: transform 0.3s ease;
 }
 
-.accordion-icon.active {
-  transform: rotate(180deg);
+.active .accordion-icon {
+  transform: rotate(135deg) scale(1);
 }
 
 .accordion-content {
