--- a/css/main.css
+++ b/css/main.css
@@ -24,9 +24,9 @@ html, body {
 
 body  {
 margin: 0;
-font-family: 'Lexend', sans-serif;
-font-size: 14px;
-line-height: 18px;
+font-family: 'Libre Franklin', sans-serif;
+font-size: 16px;
+line-height: 150%;
 font-style: normal;
 color: #212721;
 vertical-align: top;
@@ -52,25 +52,26 @@ padding:0px;
 
 #course-banner {
 	width: 100%;
-	max-height: 400px;
+	max-height: 200px;
 	background-color: #0E256A;
 	color: #fff;
 	padding: 20px;
-	font-size: 140%;
+	font-size: 150%;
 	font-family: 'Lexend', sans-serif;
 }
 #course-banner h1{
-	font-size: 33px;
-	margin-bottom: 0px;
+	font-size: 150%;
 }
 
 #course-banner h2{
-	font-size: 24px;
-	line-height: 20px;
-	color: #fff;
-	margin-top: 8px;
+	font-size: 90%;
+	color: #EEE;
 }
 
+h1 {
+	font-family: 'Lexend', sans-serif;
+	font-size: 140%;
+}
 a {
   color: #4F81BD;
   text-decoration: none;
@@ -85,6 +86,12 @@ a:visited {
  color: #551A8B;
 }
 
+
+.content {
+	max-width: 1200px;
+	margin: auto;
+	padding: 20px;
+}
 ul {
     list-style: square outside none;
 }
@@ -99,89 +106,6 @@ li {
 	margin-bottom: 30px;
 	padding: 10px 20px;
 }
-
-
-#h_red {
-	border-left: 1px solid #C0504D;
-	border-top: 1px solid #C0504D;
-	border-right: 1px solid #C0504D;
-	border-bottom: 1px solid #C0504D;
-	background: #C0504D;
-	color: #fff;
-	letter-spacing: 1px;
-}
-
-#red h3 {
-    border-bottom: 5px solid #C0504D;
-    padding: 0px 0px 16px 0px;
-    width: 300px;
-}
-
-#h_blue {
-	border-left: 1px solid #4F81BD;
-	border-top: 1px solid #4F81BD;
-	border-right: 1px solid #4F81BD;
-	border-bottom: 1px solid #4F81BD;
-	background: #4F81BD;
-	color: #fff;
-	letter-spacing: 1px;
-}
-
-#blue h3 {
-    border-bottom: 5px solid #4F81BD;
-    padding: 0px 0px 16px 0px;
-    width: 300px;
-}
-
-#h_green {
-	border-left: 1px solid #9BBB59;
-	border-top: 1px solid #9BBB59;
-	border-right: 1px solid #9BBB59;
-	border-bottom: 1px solid #9BBB59;
-	background: #9BBB59;;
-	color:  #fff;
-	letter-spacing: 1px;
-}
-
-#green h3 {
-    border-bottom: 5px solid #9BBB59;
-    padding: 0px 0px 16px 0px;
-    width: 300px;
-}
-
-#h_pink {
-	border-left: 1px solid #CC99FF;
-	border-top: 1px solid #CC99FF;
-	border-right: 1px solid #CC99FF;
-	border-bottom: 1px solid #CC99FF;
-	background: #CC99FF;
-	color: #fff;
-	letter-spacing: 1px;
-}
-
-#pink h3 {
-    border-bottom: 5px solid #CC99FF;
-    padding: 0px 0px 16px 0px;
-    width: 300px;
-}
-
-
-#h_orange {
-	border-left: 1px solid #F79646;
-	border-top: 1px solid #F79646;
-	border-right: 1px solid #F79646;
-	border-bottom: 1px solid #F79646;
-	background: #F79646;
-	color: #fff;
-	letter-spacing: 1px;
-}
-
-#orange h3 {
-    border-bottom: 5px solid #F79646;
-    padding: 0px 0px 16px 0px;
-    width: 300px;
-}
-
 
 .m_box_header {
 	background-color: #eee;
@@ -209,18 +133,13 @@ li {
 
 #footer {
 	width: 100%;
-	height: 180px;
-	background-color: #eee;
-	color: #555;
-	text-align: center;
-	font-weight: 700;
+	min-height: 300px;
+	background-color: #F2FBFC;
+	color: #333;
+	font-size: 12px;
+	border-top: 1px solid #ccc;
 }
 
-.content {
-	max-width: 1200px;
-	margin: auto;
-	padding: 20px;
-}
 
 #footer img {
 	float: right;
@@ -272,6 +191,12 @@ li {
 	margin-top: 12px;
 }
 
+#clapping-bg {
+	background-image: url("../images/clapping.svg");
+	background-repeat: no-repeat;
+background-size: cover;
+}
+
 #learning {
     float: right;
     margin-left: 30px;
@@ -286,8 +211,8 @@ li {
     background-color: #F4F5F7;
     border-radius: 10px;
     color: #555;
-    font-size: 105%;
-    font-weight: 800;
+    font-size: 90%;
+    font-weight: 600;
     display: block;
     text-align: center;
 	clear: both;
@@ -422,20 +347,19 @@ button {
 
 .label {
   display: inline-block;
-  margin: 0px 11% 0px 0px;
-  padding: 5px 0px;
-  width: 100px;
-  color: #222;
+  margin: 0px 155px 0px 0px;
+  padding: 0px 5px 0px 0px;
+  color: #CCC;
   cursor: pointer;
   text-align: center;
   text-transform: uppercase;
-  font-size: 12px;
+  font-size: 10px;
   font-weight: 600;
-line-height: 16px;
+  line-height: 16px;
 }
 
 .radio:checked + .label {
-  color: darkblue;
+  color: #0E256A;
 }
 
 .progress {
@@ -445,16 +369,16 @@ line-height: 16px;
 }
 
 .progress {
-  padding: 4px;
-  background: #fff;
+  padding: 2px;
+  background: #EEE;
   border-radius: 6px;
   border: 1px solid #ccc;
 }
 
 .progress-bar {
-  height: 30px;
+  height: 10px;
   border-radius: 4px;
-	background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.05));
+  background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.05));
   background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.05));
   background-image: -o-linear-gradient(top, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.05));
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.05));
@@ -472,25 +396,29 @@ line-height: 16px;
 
 #zero:checked ~ .progress > .progress-bar {
   width: 20%;
-  background-color: #f21111;
+  background-color: #333;
 }
 
 #twenty:checked ~ .progress > .progress-bar {
   width: 40%;
-  background-color: #f23711;
+  background-color: #333;
 }
 
 #forty:checked ~ .progress > .progress-bar {
-  width: 60%;
-  background-color: #f28211;
+  width: 40%;
+  background-color: #333;
 }
 
 #sixty:checked ~ .progress > .progress-bar {
-  width: 80%;
-  background-color: #f2cc11;
+  width: 60%;
+  background-color: #333;;
 }
 
 #eighty:checked ~ .progress > .progress-bar {
+  width: 80%;
+  background-color: #333;
+}
+#hundred:checked ~ .progress > .progress-bar {
   width: 100%;
-  background-color: #cdf211;
+  background-color: #333;
 }
