--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,6 @@ body  {
 margin: 0;
 font-family: 'Libre Franklin', sans-serif;
 font-size: 16px;
-line-height: 150%;
 font-style: normal;
 color: #212721;
 vertical-align: top;
@@ -52,11 +51,10 @@ padding:0px;
 
 #course-banner {
 	width: 100%;
-	max-height: 200px;
+	max-height: 240px;
 	background-color: #0E256A;
 	color: #fff;
-	padding: 20px;
-	font-size: 150%;
+	padding: 10px;
 	font-family: 'Lexend', sans-serif;
 }
 #course-banner h1{
@@ -64,8 +62,12 @@ padding:0px;
 }
 
 #course-banner h2{
-	font-size: 90%;
+	font-size: 120%;
 	color: #EEE;
+}
+
+p {
+	line-height: 140%;
 }
 
 h1 {
@@ -194,7 +196,7 @@ li {
 #clapping-bg {
 	background-image: url("../images/clapping.svg");
 	background-repeat: no-repeat;
-background-size: cover;
+background-size: 100%;
 }
 
 #learning {
@@ -244,14 +246,6 @@ background-size: cover;
     letter-spacing: 1px;
     color: #1F385B;
 	margin-top:2px;
-}
-.flip {
-cursor: pointer;
-background-color: #eee;
-border: 1px solid #333;
-border-radius: 50%;
-width: 50px;
-height: 50px;
 }
 
 #panel {
