--- a/css/main.css
+++ b/css/main.css
@@ -141,7 +141,7 @@ height: 225px;
   width: 100%;
   height: auto;
   border-radius: 8px;
-  border: 1px solid #333;
+  border: 1px solid #CCC;
 
 }
 .modules p {
