--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ padding:0px;
 	min-height: 80px;
 	background-color: #FFF;
 	font-family: 'Lexend', sans-serif;
-	padding: 10px 10px;
+	padding: 0px;
 }
 #course-banner h1{
 	color: #0E256A;;
