--- a/css/main.css
+++ b/css/main.css
@@ -322,17 +322,16 @@ button {
   width: 100%;
   padding: 10px;
   margin: auto;
-  border: 1px solid #ddd;
 }
 
 .accordion-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #f9f9f9;
-  padding: 10px;
+  padding: 0px 10px 0px 0px;
   cursor: pointer;
   margin-bottom: 10px;
+  border-top: 2px solid #333;
 }
 
 
@@ -350,7 +349,7 @@ button {
 }
 
 .accordion-content {
-  padding: 10px;
+  padding: 0px 10px 10px 10px;
   display: none;
 }
 
