--- a/css/main.css
+++ b/css/main.css
@@ -165,7 +165,7 @@ hr {
 #footer {
 	width: 100%;
 	min-height: 250px;
-	background-color: #F2FBFC;
+	background-color: #F4F5F6;
 	color: #333;
 	font-size: 12px;
 	border-top: 1px solid #ccc;
