--- a/css/main.css
+++ b/css/main.css
@@ -446,3 +446,39 @@ button {
   width: 100%;
   background-color: #333;
 }
+
+
+.glossary {
+    width: 90%;
+    margin: auto;
+    padding: 20px;
+    box-shadow: 0 4px 4px rgba(0,0,0,0.1);
+    background: #f9f9f9;
+}
+
+
+dl {
+    margin-top: 20px;
+}
+
+dt {
+    font-weight: bold;
+    font-size: 16px;
+    color: #0056b3;
+    margin-top: 20px;
+	margin-bottom: 5px;
+	font-family: Lexend;
+}
+
+dd {
+    margin-left: 20px;
+    font-size: 14px;
+    color: #222;
+	line-height: 22px;
+	
+}
+
+dt:hover {
+    color: #ff6347;
+    cursor: pointer;
+}
