updated home page

--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ body  {
 margin: 0;
 font-family: 'Libre Franklin', sans-serif;
 font-size: 16px;
+line-height: 20px;
 font-style: normal;
 color: #212721;
 vertical-align: top;
